@@ -27,7 +27,6 @@ import java.util.*;
 
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileUtil;
-import org.apache.hadoop.mapred.JobClient;
 
 /** Run a Hadoop job jar. */
 public class RunJar {
@@ -143,14 +142,6 @@ public class RunJar {
       }
     }
     
-    //adding libjars to the classpath
-    Configuration conf = JobClient.getCommandLineConfig();
-    URL[] libJars = GenericOptionsParser.getLibJars(conf);
-    if(libJars!=null) {
-      for(URL url : libJars){
-        classPath.add(url);
-      }
-    }
     ClassLoader loader =
       new URLClassLoader(classPath.toArray(new URL[0]));
 
